<resources>
    <string name="app_name">DC-APP</string>
    <string name="extract">Extract</string>
    <string name="isrologo">IsroLogo</string>
    <string name="facebook_app_id">173888043228722</string>
    <string name="fb_login_protocol_scheme">fb173888043228722</string>
    <string name="copyright_2018_isro_nrsc_jodhpur">Copyright © 2018 ISRO-NRSC Jodhpur</string>
    <string name="skip"><![CDATA[Skip>>]]></string>
    <string name="don_t_have_an_account_create_new_account">Don\'t Have an account ? <b>Create New Account</b></string>
    <string name="already_have_an_account_log_in">Already Have An Account? <b>Log In</b></string>
    <string name="forget_password_recover_here">Forget password ?<b> Recover Here</b></string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="my_forms">My Forms</string>
    <string name="submited_forms">Submited Forms</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fill_new_form">Fill New Form</string>
    <string name="logoapk">logoapk</string>
    <string name="dc_app">DC-APP</string>
    <string name="phone_number_email_or_username">Phone number,email or username</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="or_login_with">Or LogIn With</string>
    <string name="nothing">nothing</string>
    <string name="forgot_your_login_details_get_help_signing_in">Forgot your login details? <b>Get help signing in.</b></string>
</resources>
